--- a/rizzlabs/package.json
+++ b/rizzlabs/package.json
@@ -37,6 +37,7 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
+    "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
@@ -46,6 +47,7 @@
     "lucide-react": "^0.446.0",
     "next": "14.2.13",
     "next-themes": "^0.3.0",
+    "openai": "^4.65.0",
     "react": "^18",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
